Completed base logice in level DAL Fixed shortcomings in Core Add Migration Try create DB

--- a/src/BookInfoApp.WebAPI/appsettings.json
+++ b/src/BookInfoApp.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "UserID=IDpostgre;Password=password;Server=IpServer;Port=5432;Database=NameDB;Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
