--- a/src/BookInfoApp.DAL/BookInfoApp.DAL.csproj
+++ b/src/BookInfoApp.DAL/BookInfoApp.DAL.csproj
@@ -8,4 +8,12 @@
     <ProjectReference Include="..\BookInfoApp.Core\BookInfoApp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
+  </ItemGroup>
+
 </Project>
