Completed base logice in level Services

--- a/src/BookInfoApp.Services/BookInfoApp.Services.csproj
+++ b/src/BookInfoApp.Services/BookInfoApp.Services.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\BookInfoApp.DAL\BookInfoApp.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="8.1.1" />
+  </ItemGroup>
+
 </Project>
